// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<div
  className="button_style"
  data-testid="button"
>
  Hi 
  save
</div>
`;

exports[`matches snapshot 2`] = `
<div
  className="button_style"
  data-testid="button"
>
  Hi 
   world
</div>
`;
